--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,12 @@ android {
         }
     }
 
+    sourceSets {
+        main {
+            jniLibs.srcDirs=['libs']
+        }
+
+    }
     dexOptions {
         jumboMode true
         javaMaxHeapSize "4g"  //增加java堆内存大小
@@ -68,7 +74,7 @@ dependencies {
     }
     compile project(':photoviewlibrary')
     //cardView
-    compile "com.android.support:cardview-v7:${supportLibVersion}"
+    compile 'com.android.support:cardview-v7:25.3.0'
     compile "com.android.support:appcompat-v7:${supportLibVersion}"
     compile "com.android.support:design:${supportLibVersion}"
     //rx的库
@@ -95,9 +101,10 @@ dependencies {
     compile 'com.contrarywind:Android-PickerView:3.1.1'
     compile 'q.rorbin:badgeview:1.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    compile files('libs/android-support-v4.jar')
 }
