--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,5 +113,5 @@ dependencies {
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    compile files('libs/android-support-v4.jar')
+//    compile files('libs/android-support-v4.jar')
 }
