--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'kotlin-android'
 retrolambda {
     javaVersion JavaVersion.VERSION_1_7
 }
@@ -47,7 +48,6 @@ android {
         main {
             jniLibs.srcDirs = ['libs']
         }
-
     }
     dexOptions {
         jumboMode true
@@ -83,6 +83,7 @@ dependencies {
     //cardView
     compile "com.android.support:appcompat-v7:${supportLibVersion}"
     compile "com.android.support:design:${supportLibVersion}"
+    compile "com.android.support:cardview-v7:${supportLibVersion}"
     //rx的库
     //数据库
     //加验证的库
@@ -91,7 +92,6 @@ dependencies {
     //气泡背景框
     compile 'com.facebook.stetho:stetho:1.3.1'
     compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
-    compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'org.greenrobot:eventbus:3.0.0'
 
@@ -117,4 +117,6 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.1.0'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
 }
