--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.1.2-4'
+
     repositories {
         jcenter()
         mavenCentral()
@@ -8,6 +10,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.1'
         classpath 'me.tatarka:gradle-retrolambda:3.6.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -22,9 +25,9 @@ ext {
     compileSdkVersion = 25
     targetSdkVersion = compileSdkVersion
     minSdkVersion = 15      //4.0
-    versionCode = 37
-    versionName = "1.3.7"
-    supportLibVersion = '25.3.0'
+    versionCode = 39
+    versionName = "1.3.9"
+    supportLibVersion = '25.3.1'
 }
 
 task clean(type: Delete) {
