--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,5 +118,6 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+//    compile "io.reactivex.rxjava2:rxkotlin:$rxkotlin"
 
 }
