--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ ext {
     versionCode = 39
     versionName = "1.3.9"
     supportLibVersion = '25.3.1'
+    rxkotlin = "2.0.3"
 }
 
 task clean(type: Delete) {
