--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'walle'
 
 retrolambda {
     javaVersion JavaVersion.VERSION_1_7
@@ -29,7 +30,6 @@ android {
     }
 
     buildTypes {
-
         release {
             signingConfig signingConfigs.release
             zipAlignEnabled true//内存对齐
@@ -65,6 +65,7 @@ android {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
+
 }
 
 repositories {
@@ -92,11 +93,11 @@ dependencies {
     //zxing扫码
     //图片选择器
     //气泡背景框
+    compile 'com.meituan.android.walle:library:1.1.3'//多渠道打包
     compile 'com.facebook.stetho:stetho:1.3.1'
     compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'org.greenrobot:eventbus:3.0.0'
-
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
     compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
@@ -115,11 +116,26 @@ dependencies {
     compile 'q.rorbin:badgeview:1.1.0'
     compile 'com.jakewharton:butterknife:8.1.0'
     testCompile 'junit:junit:4.12'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.1.0'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-//    compile "io.reactivex.rxjava2:rxkotlin:$rxkotlin"
+
+}
+/**
+ * 打包命令
+ * 生成单个渠道包 ./gradlew clean assembleReleaseChannels -PchannelList=meituan
+ * 支持 productFlavors ./gradlew clean assembleMeituanReleaseChannels -PchannelList=meituan
+ * 生成多个渠道包 ./gradlew clean assembleReleaseChannels -PchannelList=meituan,dianping
+ * 通过渠道配置文件来生成渠道包 ./gradlew clean assembleReleaseChannels -PchannelFile=channel(写全路径)
+ **/
+walle {
+    // 指定渠道包的输出路径
+    apkOutputFolder = new File("${project.buildDir}/outputs/channels");
+    // 定制渠道包的APK的文件名称
+    apkFileNameFormat = 'i家帮员工端-${channel}-${buildType}-v${versionName}-${versionCode}-${buildTime}.apk';
+    // 渠道配置文件
+    channelFile = new File("${project.getProjectDir()}/channel")
 
 }
