--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,11 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'me.tatarka:gradle-retrolambda:3.6.0'
+//        classpath 'com.android.tools.build:gradle:3.0.0-alpha2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.meituan.android.walle:plugin:1.1.3'
     }
 }
 
@@ -22,13 +24,12 @@ allprojects {
 }
 ext {
     buildToolsVersion = "25.0.2"
-    compileSdkVersion = 25
+    compileSdkVersion = 26
     targetSdkVersion = compileSdkVersion
     minSdkVersion = 15      //4.0
-    versionCode = 39
-    versionName = "1.3.9"
+    versionCode = 4
+    versionName = "1.0.4"
     supportLibVersion = '25.3.1'
-    rxkotlin = "2.0.3"
 }
 
 task clean(type: Delete) {
